--- a/user-onboarding/src/index.scss
+++ b/user-onboarding/src/index.scss
@@ -1,3 +1,6 @@
+@import 'normalize.css';
+@import 'carbon-components/scss/globals/scss/styles.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
