--- a/user-onboarding/src/App.scss
+++ b/user-onboarding/src/App.scss
@@ -1,1 +1,19 @@
+.register-form {
+  display: flex;
+  flex-flow: column;
+  max-width: 400px;
 
+  &--field {
+    margin: 10px 2%;
+    border: 1px solid black;
+  }
+}
+
+p.error {
+  color: red;
+}
+
+.bx--checkbox-wrapper {
+  display: flex;
+  flex-flow: row;
+}
